# vkgdr

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Jenkinsfile  LICENSE  Makefile  README.rst  mypy.ini  pyproject.toml  requirements-readthedocs.txt  requirements.txt  setup.cfg  setup.py  vkgdr.c  vkgdr.h  vkgdr_test.cu
.ci/: Dockerfile
.github/workflows/: build.yml
doc/: .gitignore  Doxyfile  Makefile  c_api.rst  changelog.rst  conf.py  index.rst  intro.rst  python_api.rst
examples/: .gitignore  vkgdr_example.py
manylinux/: before_all.sh
src/vkgdr/: __init__.py  build.py  pycuda.py
test/: test_vkgdr.py
