[build-system]
requires = [
    "setuptools",
    "wheel",
    "cffi",
    "katversion",
    "setuptools_scm[toml]==6.4.2"   # Just for producing the manifest, not versioning
]

[tool.cibuildwheel]
build-frontend = "build"
before-all = "manylinux/before_all.sh"
manylinux-x86_64-image = "manylinux_2_28"
build = ["cp37-manylinux*"]   # Uses limited API, so only one version needed

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = "test"
filterwarnings = [
       'ignore:`np\..*` is a deprecated alias::pycuda\.compyte\.dtypes',
]
