[metadata]
name = vkgdr
description = Use Vulkan to allocate CUDA memory that is writable from the host
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Modified BSD
author = Bruce Merry
author_email = cbf@ska.ac.za
url = https://github.com/ska-sa/vkgdr
classifiers =
    Environment :: GPU :: NVIDIA CUDA
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
install_requires =
    cffi>=1.12.0
python_requires = >=3.7
zip_safe = false            # For py.typed

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[options.extras_require]
pycuda =
    pycuda

test =
    pytest
    pycuda
    numpy

[bdist_wheel]
py_limited_api = cp37
